@@ -171,6 +171,28 @@ mpd_send_disable_output(struct mpd_connection *connection, unsigned output_id);
 bool
 mpd_run_disable_output(struct mpd_connection *connection, unsigned output_id);
 
+/**
+ * Sends the "toggleoutput" command to MPD.
+ *
+ * @param connection a valid and connected mpd_connection.
+ * @param output_id an identifier for the output device (see
+ * mpd_recv_output())
+ * @return true on success
+ */
+bool
+mpd_send_toggle_output(struct mpd_connection *connection, unsigned output_id);
+
+/**
+ * Shortcut for mpd_send_toggle_output() and mpd_response_finish().
+ *
+ * @param connection a valid and connected mpd_connection.
+ * @param output_id an identifier for the output device (see
+ * mpd_recv_output())
+ * @return true on success
+ */
+bool
+mpd_run_toggle_output(struct mpd_connection *connection, unsigned output_id);
+
 #ifdef __cplusplus
 }
 #endif
