@@ -1,6 +1,7 @@
 libmpdclient 2.9 (not yet released)
 * support MPD protocol 0.18
   - command "readcomments"
+  - command "toggleoutput"
 
 libmpdclient 2.8 (2013/04/09)
 * song: support attribute "Prio"
